# cbioportal-mcp-qa

./: .gitignore  LEADERBOARD.md  README.md  env.template  phoenix_eval.py  pyproject.toml  simple_eval.py  steps_eval.py
.github/workflows/: dataset-sync.yaml
MCP-QA-base-set_answers/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
MCP-QA-base-set_answers_run1/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
MCP-QA-base-set_answers_run2/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
MCP-QA-base-set_eval_run1/: evaluation_20250930_192007.csv
MCP-QA-base-set_eval_run2/: evaluation_20250930_191451.csv
MCP-QA-base-set_evaluation/: evaluation_20251009_123647.csv  evaluation_20251009_125640.csv
MCP-QA-base-set_steps_eval/: 20251014_122245_steps_eval.json  20251014_122245_steps_eval_average_scores.txt
agents/: cbioportal-mcp-prompt.txt  docker-compose.yml  env.template  null-nav-prompt.txt  null-qa-prompt.txt
db_schema/: README.md  ch_schema_comments.sql  mysql_schema_comments.sql
evals/: README.md  compare_urls.py  phoenix_eval.py  simple_eval.py  steps_eval.py
export/: 1.md  10.md  11.md  12.md  13.md  14.md  16.md  18.md  2.md  20.md  21.md  22.md  24.md  3.md  4.md  5.md  7.md  8.md  9.md
export/public-portal/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
input/: MCP-QA-20251212-003509.tsv  MCP-QA-auto-synced.csv  MCP-QA-base-set.csv  MCP-QA-base-set_rubric.json  QA_pairs_20250714.csv  autosync-public.csv  benchmark-testing.csv  public_portal_qa_pairs_20250917.csv
results/cbio-agent-null/20251210/answers/: 1.md  2.md  3.md  4.md  5.md
results/cbio-agent-null/20251210/eval/: evaluation_20251210_134610.csv  evaluation_20251210_142130.csv
results/cbio-mcp-agent/20260107/answers/: 1.md  2.md  3.md  4.md  5.md
results/cbio-mcp-agent/20260107/eval/: evaluation_20260107.csv
results/cbio-mcp-agent/20260108/answers/: 1.md  2.md  3.md  4.md  5.md
results/cbio-mcp-agent/20260108/eval/: evaluation_20260108.csv
results/cbio-mcp-agent/20260115/answers/: 2.md  3.md  4.md  5.md
results/cbio-mcp-agent/20260115/eval/: evaluation_20260115.csv
results/cbio-mcp-agent/20260122/answers/: 10.md  6.md  7.md  8.md  9.md
results/cbio-mcp-agent/20260122/eval/: evaluation_20260122.csv
results/cbio-mcp-agent/20260128/answers/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
src/cbioportal_mcp_qa/: __init__.py  api.py  base_client.py  batch_processor.py  benchmark.py  csv_parser.py  evaluation.py  librechat_agent_client.py  llm_client copy.py  llm_client.py  main.py  mcp_agent_client.py  null_agent_client.py  openai_adapter.py  output_manager.py  prompts.py  sql_logger.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_benchmark_demo.py  test_csv_parser.py  test_evaluation.py  test_leaderboard.py  test_output_manager.py
(+378 files in other folders)
