[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbioportal-mcp-qa"
version = "0.1.0"
description = "QA processing for cBioPortal using MCP integration"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "pydantic-ai>=1.0.8",
    "pydantic-ai-bedrock>=0.1.0",
    "click>=8.0.0",
    "pathlib-mate>=1.0.0",
    "tqdm>=4.65.0",
    "cbioportal-mcp @ git+https://github.com/cBioPortal/cbioportal-mcp.git@main",
    "arize-phoenix-otel>=0.13.1",
    "openinference-instrumentation-pydantic-ai>=0.1.7",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-api>=1.37.0",
    "arize>=7.51.0",
    "arize-phoenix>=12.4.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "anthropic[bedrock]>=0.40.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
cbioportal-mcp-qa = "cbioportal_mcp_qa.main:cli"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["cbioportal_mcp_qa"]
